NetBSD Problem Report #39850

From www@NetBSD.org  Sun Nov  2 06:56:44 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 260A563BAB3
	for <gnats-bugs@gnats.netbsd.org>; Sun,  2 Nov 2008 06:56:44 +0000 (UTC)
Message-Id: <20081102065643.C6CAC63B88A@narn.NetBSD.org>
Date: Sun,  2 Nov 2008 06:56:43 +0000 (UTC)
From: dross@pobox.com
Reply-To: dross@pobox.com
To: gnats-bugs@NetBSD.org
Subject: sysinst.fs fails to load
X-Send-Pr-Version: www-1.0

>Number:         39850
>Category:       port-atari
>Synopsis:       sysinst.fs fails to load
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 02 07:00:00 +0000 2008
>Closed-Date:    Fri Jan 09 13:48:50 +0000 2009
>Last-Modified:  Fri Jan 09 13:48:50 +0000 2009
>Originator:     David Ross
>Release:        4.0
>Organization:
>Environment:
N/A
>Description:
I am able to boot the netbsd-BOOT kernel from:
ftp://ftp.netbsd.org/pub/NetBSD-daily/HEAD/200810310002Z/atari/binary/kernel/

However when I load the gunziped sysinst.fs via floppy the load stops after just three dots.

(sysinst.fs from here: ftp://ftp.netbsd.org/pub/NetBSD-daily/HEAD/200810310002Z/atari/installation/miniroot/)

I have no problem loading the NetBSD 1.6.1 sysinst.fs using the NetBSD 1.6.1 kernel.

This problem reproduces for me consistently using two different floppies, so I don't think it's just a media error.

I have not tried this on the 4.0 release because that version had a bug that prevented the kernel from booting (which has just been fixed in HEAD).

This is on an Atari TT030 that has previously been running NetBSD 1.6.1 well.
>How-To-Repeat:
1.  In TOS, format a high density floppy.
2.  Use rawwrite.ttp with the -H option to write the gunziped sysinst.fs image to the floppy.
3.  From TOS, load the netbsd-BOOT kernel.
4.  When prompted, type 'md2a' to load sysinst.fs off the floppy.
5.  Observe the floppy only loads a little bit and then the system freezes.
>Fix:

>Release-Note:

>Audit-Trail:

From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39850 CVS commit: src/sys/arch/atari/dev
Date: Sun, 28 Dec 2008 03:13:59 +0000 (UTC)

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sun Dec 28 03:13:59 UTC 2008

 Modified Files:
 	src/sys/arch/atari/dev: md_root.c

 Log Message:
 Clear bp->b_oflags (introduced on vmlocking2 merge) before read
 rather than calling brelse(9) after read.
 Tested by Tuomo Makinen on port-atari.

 Should fix pool panics during installation reported by David Ross
 on port-atari:
 http://mail-index.NetBSD.org/port-atari/2008/11/13/msg000113.html
 and actually close PR port-atari/39850.


 To generate a diff of this commit:
 cvs rdiff -r1.26 -r1.27 src/sys/arch/atari/dev/md_root.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-atari-maintainer->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Wed, 31 Dec 2008 15:20:58 +0900
Responsible-Changed-Why:
I'll handle this.


State-Changed-From-To: open->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Wed, 31 Dec 2008 15:20:58 +0900
State-Changed-Why:
Also confirmed by submitter:
http://mail-index.netbsd.org/port-atari/2008/12/30/msg000178.html

A pullup request to netbsd-5 will be sent later.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39850 CVS commit: [netbsd-5] src/sys/arch/atari/dev
Date: Tue,  6 Jan 2009 23:57:18 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan  6 23:57:18 UTC 2009

 Modified Files:
 	src/sys/arch/atari/dev [netbsd-5]: md_root.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #220):
 	sys/arch/atari/dev/md_root.c: revision 1.27
 Clear bp->b_oflags (introduced on vmlocking2 merge) before read
 rather than calling brelse(9) after read.
 Tested by Tuomo Makinen on port-atari.
 Should fix pool panics during installation reported by David Ross
 on port-atari:
 http://mail-index.NetBSD.org/port-atari/2008/11/13/msg000113.html
 and actually close PR port-atari/39850.


 To generate a diff of this commit:
 cvs rdiff -r1.25.20.1 -r1.25.20.2 src/sys/arch/atari/dev/md_root.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 09 Jan 2009 22:48:50 +0900
State-Changed-Why:
Pulled up to netbsd-5. Note this doesn't affect netbsd-4.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.