Pull up following revision(s) (requested by tsutsui in ticket #220): 	sys/arch/atari/dev/md_root.c: revision 1.27 Clear bp->b_oflags (introduced on vmlocking2 merge) before read rather than calling brelse(9) after read. Tested by Tuomo Makinen on port-atari. Should fix pool panics during installation reported by David Ross on port-atari: http://mail-index.NetBSD.org/port-atari/2008/11/13/msg000113.html and actually close PR port-atari/39850.